# brotli-stubs

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/brotli-stubs/: __init__.pyi
